# mcp_forge

./: .gitignore  README.md
backend/: main.py  pyproject.toml  test_key.py
backend/models/: schemas.py
backend/routers/: generate.py  registry.py
backend/services/: claude_service.py  har_service.py  registry_service.py
extension/: generate-icons.cjs  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/src/background/: har-builder.ts  service-worker.ts
extension/src/popup/: App.tsx  index.css  index.html
extension/src/popup/components/: Header.tsx  ProcessingPanel.tsx  RecordingPanel.tsx  ResultsPanel.tsx
extension/src/types/: messages.ts
frontend/: build_err.txt  build_err2.txt  index.html  package-lock.json  package.json  vite.config.ts
frontend/backend/: list_models.py
frontend/backend/routers/: generate.py
frontend/backend/services/: claude_service.py  har_service.py  registry_service.py
frontend/backend/templates/: mcp_template.py
frontend/src/: App.tsx  demo.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/ui/: animated-ai-chat.tsx
